<resources>
    <string name="app_name">MovieDB</string>
    <string name="overview">The story follows Carol Danvers as she becomes one of the universe’s most powerful heroes
        when Earth is caught in the middle of a galactic war between two alien races. Set in the 1990s, Captain Marvel
        is an all-new adventure from a previously unseen period in the history of the Marvel Cinematic Universe.
    </string>
    <string name="movie_title">Iron Man</string>
    <string name="vote_average">Vote Average</string>
    <string name="release_date">Release Date</string>
    <string name="language">Language</string>
    <string name="trailers">Trailers</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="tv_show">Tv Show</string>
    <string name="favorite">Favorite</string>
    <string name="change_language">Choose Language</string>
    <string name="lbl_trailers">Trailers</string>
    <string name="lbl_overview">Overview</string>
    <string name="lbl_title">Title</string>
    <string name="movies_fav">Movies Fav</string>
    <string name="tv_show_fav">Tv Show Fav</string>
    <string name="fav_movies_title">Movies Favotite</string>
    <string name="fav_tv_show_title">Tv Show Favotite</string>
    <string name="search">Search</string>
    <string name="release">Release Reminder</string>
    <string name="release_today">Reminder showing the movie that released today</string>
    <string name="reminder_for_return_to_app">Reminder for return to app</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="setting">Setting</string>
    <string name="add_widget">Add widget</string>
    <string name="appwidget_text">Favorite Movies Banner</string>
    <string name="empty_text">NO DATA</string>
</resources>
