<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="movies" type="com.example.moviedb.service.model.popular.ResultsItem"/>
    </data>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <com.google.android.material.appbar.AppBarLayout
                android:fitsSystemWindows="true"
                android:id="@+id/app_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <com.google.android.material.appbar.CollapsingToolbarLayout
                    app:layout_scrollFlags="scroll|exitUntilCollapsed"
                    android:fitsSystemWindows="true"
                    app:titleEnabled="false"
                    app:contentScrim="@color/colorPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:layout_collapseMode="parallax">
                    <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        <androidx.appcompat.widget.AppCompatImageView
                                android:id="@+id/iv_backdrop_detail"
                                android:scaleType="centerCrop"
                                android:src="@color/colorPrimaryDark"
                                app:srcImage='@{String.format("%s",movies.backdropPath)}'
                                android:layout_width="match_parent"
                                android:layout_height="200dp"/>

                        <androidx.appcompat.widget.LinearLayoutCompat
                                android:paddingStart="10dp"
                                android:paddingEnd="10dp"
                                android:id="@+id/linear_main_movies"
                                android:orientation="horizontal"
                                android:layout_marginTop="-30dp"
                                android:layout_below="@+id/iv_backdrop_detail"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">
                            <androidx.appcompat.widget.AppCompatImageView
                                    app:srcImage='@{String.format("%s",movies.posterPath)}'
                                    android:id="@+id/iv_poster_movie_detail"
                                    android:src="@color/colorAccent"
                                    android:layout_width="100dp"
                                    android:layout_height="150dp"/>

                            <androidx.appcompat.widget.LinearLayoutCompat
                                    android:layout_marginStart="10dp"
                                    android:layout_marginEnd="10dp"
                                    android:layout_marginTop="30dp"
                                    android:orientation="vertical"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content">
                                <androidx.appcompat.widget.AppCompatTextView
                                        android:id="@+id/tv_title_detail"
                                        android:fontFamily="sans-serif-light"
                                        android:layout_marginTop="15dp"
                                        android:layout_marginBottom="10dp"
                                        android:textStyle="bold"
                                        android:textSize="20sp"
                                        android:text="@{movies.title}"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"/>
                                <RelativeLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content">
                                    <androidx.appcompat.widget.AppCompatTextView
                                            android:id="@+id/tv_vote"
                                            android:text="@string/vote_average"
                                            android:layout_width="90dp"
                                            android:layout_height="wrap_content"/>
                                    <androidx.appcompat.widget.AppCompatTextView
                                            android:layout_below="@+id/tv_vote"
                                            android:id="@+id/tv_release"
                                            android:text="@string/release_date"
                                            android:layout_width="90dp"
                                            android:layout_height="wrap_content"/>
                                    <androidx.appcompat.widget.AppCompatTextView
                                            android:layout_below="@id/tv_release"
                                            android:id="@+id/tv_language"
                                            android:text="@string/language"
                                            android:layout_width="90dp"
                                            android:layout_height="wrap_content"/>

                                    <androidx.appcompat.widget.AppCompatTextView
                                            android:layout_toEndOf="@id/tv_vote"
                                            android:id="@+id/tv_vote_value"
                                            android:text='@{String.format("%s",movies.voteCount)}'
                                            android:layout_width="100dp"
                                            android:layout_height="wrap_content"/>
                                    <androidx.appcompat.widget.AppCompatTextView
                                            android:layout_alignBaseline="@id/tv_release"
                                            android:layout_toEndOf="@id/tv_vote"
                                            android:id="@+id/tv_release_value"
                                            android:text="@{movies.releaseDate}"
                                            app:textDate="@{movies.releaseDate}"
                                            android:layout_width="100dp"
                                            android:layout_height="wrap_content"/>
                                    <androidx.appcompat.widget.AppCompatTextView
                                            android:layout_alignBaseline="@id/tv_language"
                                            android:layout_toEndOf="@id/tv_vote"
                                            android:id="@+id/tv_language_value"
                                            android:text="@{movies.originalLanguage}"
                                            android:layout_width="100dp"
                                            android:layout_height="wrap_content"/>
                                </RelativeLayout>
                            </androidx.appcompat.widget.LinearLayoutCompat>
                        </androidx.appcompat.widget.LinearLayoutCompat>
                    </RelativeLayout>
                    <View
                            android:layout_width="match_parent"
                            android:layout_height="?actionBarSize"
                            android:background="@drawable/bg_backdrop"
                            android:layout_gravity="top"/>
                </FrameLayout>
                <androidx.appcompat.widget.Toolbar
                        android:id="@+id/toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        app:contentInsetStart="0dp"
                        app:contentInsetStartWithNavigation="0dp"
                        app:elevation="4dp"
                        app:titleTextColor="#000000"
                        app:popupTheme="@style/AppTheme.PopupOverlay"
                        app:theme="@style/AppTheme.DefaultToolbar"
                        app:layout_collapseMode="pin"/>
            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>
        <androidx.core.widget.NestedScrollView
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <androidx.appcompat.widget.AppCompatTextView
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:fontFamily="sans-serif-light"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:text="Overview"
                        android:id="@+id/tv_overview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                <View
                        android:id="@+id/tv_line"
                        android:background="@color/colorPrimaryDark"
                        android:layout_below="@id/tv_overview"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"/>

                <androidx.appcompat.widget.AppCompatTextView
                        android:text="@{movies.overview}"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:layout_below="@id/tv_line"
                        android:id="@+id/tv_overview_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                <androidx.appcompat.widget.AppCompatTextView
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:fontFamily="sans-serif-light"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:text="@string/trailers"
                        android:layout_below="@id/tv_overview_value"
                        android:id="@+id/tv_trailer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                <View
                        android:id="@+id/tv_line_trailers"
                        android:background="@color/colorPrimaryDark"
                        android:layout_below="@id/tv_trailer"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"/>

                <androidx.recyclerview.widget.RecyclerView
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="16dp"
                        android:id="@+id/rv_videos"
                        android:layout_marginTop="10dp"
                        android:layout_below="@id/tv_line_trailers"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
            </RelativeLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>